infrastructure/flux/auth/lldap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: auth
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
      - name: lldap
        image: lldap/lldap:stable
        ports:
        - name: ldap
          containerPort: 3890
        - name: http
          containerPort: 17170
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        hostPath:
          path: /zpool-ssd/k8s/lldap/data
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: auth
spec:
  selector:
    app: lldap
  ports:
  - name: ldap
    port: 3890
    targetPort: 3890
  - name: http
    port: 17170
    targetPort: 17170
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
  namespace: auth
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: ListenerSet
    name: lldap
    sectionName: https
  hostnames:
  - lldap.codesugar.mx
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lldap
      port: 17170
